updates to assets.DS_store and index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
       <img src="assets/images/selfiecopy copy.jpg" class="auth-image" alt="taber haislip" height="200px" width="200px">
 
-    </section>
     <p>Taber Haislip is an Atlanta native with background in Music, Technical Theatre, Art, and numerous other skills
         and passions. A graduate of Parkview High School in Gwinnett County, he also attended Dekalb School of The Arts
         (DSA), where he majored in Theatrical Lighting Design. Prior to attending DSA, Taber interned at 7 Stages
@@ -35,6 +34,7 @@
         He has recently taken the initiative to dive into the world of coding through the Georgia Tech
         Coding Bootcamp, using said skills to create this portfolio page.</p>
   </div>
+</secrion>
 
   <footer>
     <div class="container">
